# context-forge-demo

./: .env.contextforge  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile-agent-assist  Dockerfile-base  Makefile  README.md  SETUP.md  docker-compose-infra.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml
backend/: __init__.py  app.py  app_utils.py  logger.py  schemas.py  setup_context_forge.py  utils.py
backend/agents/: consts.py  prompts.py  qa_workflows.py  run_workflow.py
backend/agents/chains/: __init__.py  agent_assist_qa_chain.py
backend/agents/nodes/: qa_compress_search_node.py  qa_llm_call_node.py  qa_should_continue.py  qa_tool_node.py
backend/agents/states/: qa_states.py
backend/agents/tools/: __init__.py  knowledge_base_tool.py  research_complete.py  user_profile_tool.py
backend/config/: app_config.ini  logging.conf
context-forge-plugin/: Dockerfile-context-forge-plugin  config_demo.yaml
context-forge-plugin/pii_filter_demo/: README.md  pii_filter.py  pii_filter_rust.py
deploy/: logs.sh
deploy/scripts/: fetchProjectID.sh
deploy/terraform/: DEPLOY.md
deploy/terraform/agent_assist/: job_setup_context_forge.tf  main.tf  variables.tf  (+1 more)
frontend/: index.html
mcp_servers/: Dockerfile-mcp  crm_mcp_server.py  health_mcp_server.py  ingest.py  underwriting_mcp_server.py
wxo-project/: SETUP_WXO.md  delete-demo-all.sh  import-demo-all.sh
wxo-project/agents/: insurance_analyst_agent.yaml  insurance_broker_agent.yaml
wxo-project/connections/: analyst_context_forge.yaml  broker_context_forge.yaml
(+7 files in other folders)
